# scrcpy-opencv-SQ

./: CMakeLists.txt  README.md
code/: main.cpp
code/recipe/: zhidao.cpp  zhidao.h
code/server/: server.cpp  server.h  server_interface.cpp  server_interface.h  server_window.cpp  server_window.h  server_window.ui
code/stream/: frame_buffer.cpp  frame_buffer.h  stream.cpp  stream.h
ui_project_backup/server_window/: CMakeLists.txt  main.cpp  server_window.cpp  server_window.h  server_window.ui
